fix wordwrap assignment 06

--- a/docs/assignments/06-IntroJavascript/css/style.css
+++ b/docs/assignments/06-IntroJavascript/css/style.css
@@ -29,6 +29,7 @@ input {
     background: pink;
     color: black;
     height: auto;
+    word-wrap: break-word;
 }
 
 #right:hover {
